用户权限设置

--- a/KingPlatform/Views/Home/Index.cshtml
+++ b/KingPlatform/Views/Home/Index.cshtml
@@ -4,18 +4,18 @@
     <title>金信诺协同平台</title>
     <meta charset="UTF-8">
     <link href="~/Content/css/framework-font.css" rel="stylesheet" />
-    <script type="text/javascript" src="~/Content/Scripts/jquery/jquery-1.12.0.min.js"></script>
-    <script type="text/javascript" src="~/Content/Scripts/BootStrap/bootstrap.min.js"></script>
-    <link href="~/Content/Scripts/BootStrap/bootstrap.min.css" rel="stylesheet" />
-    <script type="text/javascript" src="~/Content/Scripts/dialog/dialog.js"></script>
-    <script type="text/javascript" src="~/Content/Scripts/cookie/jquery.cookie.js"></script>
+    <script src="~/Content/js/jquery/jquery-2.1.1.min.js"></script>
+    <script src="~/Content/js/bootStrap/bootstrap.js"></script>
+    <link href="~/Content/js/bootStrap/bootstrap.min.css" rel="stylesheet" />
+    <script src="~/Content/js/dialog/dialog.js"></script>
+    <script src="~/Content/js/cookie/jquery.cookie.js"></script>
     <link href="~/Content/css/framework-theme.css" rel="stylesheet" />
-    <script type="text/javascript" src="~/Content/Scripts/framework-ui.js"></script>
-    <script type="text/javascript" src="~/Content/Scripts/framework-clientdata.js"></script>
+    <script src="~/Content/js/framework-ui.js"></script>
+    <script src="~/Content/js/framework-clientdata.js"></script>
 </head>
 <body>
     <div id="ajax-loader">
-        <img src="~/Content/image/ajax-loader.gif" />
+        <img src="~/Content/img/ajax-loader.gif" />
     </div>
     <div id="theme-wrapper">
         <header class="navbar" id="header-navbar">
@@ -65,7 +65,7 @@
                             </li>
                             <li class="dropdown profile-dropdown">
                                 <a href="#" class="dropdown" data-toggle="dropdown">
-                                    <img src="~/Content/image/samples/robert-300.jpg" alt="" />
+                                    <img src="~/Content/img/samples/robert-300.jpg" alt="" />
                                     <span class="hidden-xs">@Basic.Code.OperatorProvider.Provider.GetCurrent().UserCode</span>
                                 </a>
                                 <ul class="dropdown-menu pull-right">
@@ -88,7 +88,7 @@
                     <section id="col-left" class="col-left-nano">
                         <div id="col-left-inner" class="col-left-nano-content">
                             <div id="user-left-box" class="clearfix hidden-sm hidden-xs dropdown profile2-dropdown">
-                                <img alt="" src="~/Content/image/samples/robert-300.jpg" />
+                                <img alt="" src="~/Content/img/samples/robert-300.jpg" />
                                 <div class="user-box">
                                     <span class="name">
                                         @Basic.Code.OperatorProvider.Provider.GetCurrent().UserName
@@ -168,9 +168,9 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="~/Content/Scripts/index.js"></script>
-    <script type="text/javascript" src="~/Content/Scripts/indextab.js"></script>
-    <script type="text/javascript" src="~/Content/Scripts/loading/pace.min.js"></script>
+    <script type="text/javascript" src="~/Content/js/index.js"></script>
+    <script type="text/javascript" src="~/Content/js/indextab.js"></script>
+    <script type="text/javascript" src="~/Content/js/loading/pace.min.js"></script>
 </body>
 </html>
 
