--- a/KingPlatform/Views/Login/Index.cshtml
+++ b/KingPlatform/Views/Login/Index.cshtml
@@ -7,9 +7,9 @@
     <title>金信诺协同平台</title>
     <link href="~/Content/css/framework-font.css" rel="stylesheet" />
     <link href="~/Content/css/framework-login.css" rel="stylesheet" />
-    <script src="~/Content/Scripts/jquery/jquery-1.12.0.min.js"></script>
-    <script src="~/Content/Scripts/cookie/jquery.cookie.js"></script>
-    <script src="~/Content/Scripts/md5/JQuery.md5.js"></script>
+    <script src="~/Content/js/jquery/jquery-2.1.1.min.js"></script>
+    <script src="~/Content/js/cookie/jquery.cookie.js"></script>
+    <script src="~/Content/js/md5/JQuery.md5.js"></script>
 </head>
 <body>
     <div class="wrapper">
