--- a/KingPlatform/Content/css/framework-theme.css
+++ b/KingPlatform/Content/css/framework-theme.css
@@ -13,7 +13,7 @@ html,body{font-family:Î¢ÈíÑÅºÚ,ËÎÌå,Arial,Helvetica,Verdana,sans-serif !importan
 a{color:#475059;outline:none!important;}
 a:hover,a:focus{color:#475059;}
 #loadingPage .loading-shade {cursor: wait; display: block; width: 100%; height: 100%; opacity: 0.0; filter: alpha(opacity=00); background: #fff; position: absolute; top: 0; left: 0; z-index: 100009;}
-#loadingPage .loading-content {cursor: default; position: absolute; z-index: 100019; width: auto; border: 1px solid rgb(187, 187, 187); height: 80px; line-height: 80px; padding-left: 80px; padding-right: 20px; border-radius: 10px; color: rgb(102, 102, 102); font-size: 20px; left: 0px; top: 0px; background: url(../image/loading.gif) 5px 50% no-repeat rgb(255, 255, 255);box-shadow: 0 1px 15px rgba(0,0,0,.175);}
+#loadingPage .loading-content {cursor: default; position: absolute; z-index: 100019; width: auto; border: 1px solid rgb(187, 187, 187); height: 80px; line-height: 80px; padding-left: 80px; padding-right: 20px; border-radius: 10px; color: rgb(102, 102, 102); font-size: 20px; left: 0px; top: 0px; background: url(../img/loading.gif) 5px 50% no-repeat rgb(255, 255, 255);box-shadow: 0 1px 15px rgba(0,0,0,.175);}
 .container{padding-left:8px;padding-right:8px;margin:0;width:100%;}
 @media (max-width:767px){.container{padding-left:5px;padding-right:5px;}}.row{margin-left:-8px;margin-right:-8px;}
 #theme-wrapper{box-shadow:0 0 53px 0 rgba(0,0,0,0.55);}
