--- a/KingPlatform/Views/Shared/_Index.cshtml
+++ b/KingPlatform/Views/Shared/_Index.cshtml
@@ -9,7 +9,7 @@
     <script src="~/Content/js/jquery/jquery-2.1.1.min.js"></script>
     <script src="~/Content/js/bootStrap/bootstrap.js"></script>
     <link href="~/Content/js/bootStrap/bootstrap.min.css" rel="stylesheet" />
-    <script src="~/Content/js/jqgrid/jqgrid.min.js"></script>
+    <script src="~/Content/js/jqgrid/jqgrid.min.js" charset="gb2312"></script>
     <link href="~/Content/js/jqgrid/jqgrid.css" rel="stylesheet" />
     <script src="~/Content/js/jqgrid/grid.locale-cn.js"></script>
     <link href="~/Content/css/framework-ui.css" rel="stylesheet" />
