获取华为PO信息

--- a/KingPlatform/Views/Home/Index.cshtml
+++ b/KingPlatform/Views/Home/Index.cshtml
@@ -110,24 +110,6 @@
                                             <span>联系人</span>
                                         </a>
                                     </li>
-                                    <li class="common">
-                                        <a href="#">
-                                            <i class="fa fa-star-o"></i>
-                                            <span>合同</span>
-                                        </a>
-                                    </li>
-                                    <li class="common">
-                                        <a href="maps.html">
-                                            <i class="fa fa-star-o"></i>
-                                            <span>产品</span>
-                                        </a>
-                                    </li>
-                                    <li class="common">
-                                        <a href="#">
-                                            <i class="fa fa-star-o"></i>
-                                            <span>客户</span>
-                                        </a>
-                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -170,7 +152,7 @@
     </div>
     <script type="text/javascript" src="~/Content/js/index.js"></script>
     <script type="text/javascript" src="~/Content/js/indextab.js"></script>
-    <script type="text/javascript" src="~/Content/js/loading/pace.min.js"></script>
+    @*<script type="text/javascript" src="~/Content/js/loading/pace.min.js"></script>*@
 </body>
 </html>
 
