--- a/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Change.cshtml
+++ b/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Change.cshtml
@@ -14,7 +14,7 @@
             height: $(window).height() - 128,
             colModel: [
                 { label: '订单号', name: 'poNumber', width: 100, align: 'left' },
-                { label: '订单行号', name: 'poLineNum', hidden: true },
+                { label: '订单行号', name: 'poLineNum', width: 50, align: 'left' },
                 { label: '编码', name: 'itemCode', width: 80, align: 'left' },
                 { label: '描述', name: 'itemDescription', width: 350, align: 'left' },
                 { label: '数量', name: 'needQuantity', width: 80, align: 'left' },
@@ -30,6 +30,7 @@
             autoScroll: true,
             viewrecords: true,
             gridComplete: function () {
+                $('#ajax-loader').fadeOut();
                 $("input[type='checkbox']").removeClass('checkbox');
             }
         });
@@ -40,10 +41,10 @@
         var message;
         if (flag) {
             operateType = "accept";
-            message = "注： 您确定要【接受】这些订单吗？";
+            message = "注： 您确定要【接受】这些变更订单吗？";
         } else {
             operateType = "reject";
-            message = "注： 您确定要【驳回】这些订单吗？";
+            message = "注： 您确定要【驳回】这些变更订单吗？";
         }
         var ids = $("#gridList").jqGrid("getGridParam", "selarrrow");
         ids = ids.join("#");
@@ -53,24 +54,43 @@
                     url: "/HuaweiOrderManage/FindPOList/SignBackPOList",
                     param: { ids: ids, operateType: operateType, types: "ChangePOList" },
                     success: function () {
-                        $.currentWindow().$("#gridList").trigger("reloadGrid");
+                        window.location.reload();
+                        //$.currentWindow().$("#gridList").trigger("reloadGrid");
                     }
                 })
             }
         });
+    }
 
+    function btn_details() {
+        var keyValue = $("#gridList").jqGrid("getGridParam", "selrow");
+        $.modalOpen({
+            id: "Details",
+            title: "查看变更明细",
+            url: "/HuaweiOrderManage/FindPOList/ChangeDetails?keyValue=" + keyValue,
+            width: "700px",
+            height: "550px",
+            btn: null,
+        });
     }
 
 </script>
+<div id="ajax-loader">
+    <img src="~/Content/img/ajax-loader.gif" />
+</div>
 <div class="topPanel">
     <div class="search">
         <span>华为发起变更PO列表</span>
     </div>
     <div class="toolbar">
+        <div class="btn-group">
+            <a class="btn btn-primary" onclick="$.reload()"><span class="glyphicon glyphicon-refresh"></span></a>
+        </div>
         <div class="operate">
             <ul class="nav nav-pills">
                 <li class="first">华为发起变更PO列表</li>
                 <li class="first">已选中<span>1</span>项</li>
+                <li><a id="NF-btn_details" authorize="yes" onclick="btn_details()"><i class="fa fa-pencil-square-o"></i>查询PO变更明细</a></li>
                 <li><a id="NF-signBackPOList" authorize="yes" onclick="btn_signBackPOList(true)"><i class="fa fa-pencil-square-o"></i>PO签返（接受）</a></li>
                 <li><a id="NF-signBackPOList" authorize="yes" onclick="btn_signBackPOList(false)"><i class="fa fa-pencil-square-o"></i>PO签返（驳回）</a></li>
             </ul>
