--- a/KingPlatform/Views/Login/Index.cshtml
+++ b/KingPlatform/Views/Login/Index.cshtml
@@ -15,7 +15,7 @@
     <div class="wrapper">
         <div class="container">
             <div class="logo">
-                <i class="fa fa-modx"></i>
+                <img src="~/Content/img/logo.png"/>
                 <h1>金信诺协同平台</h1>
             </div>
             <form class="form">
