--- a/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Change.cshtml
+++ b/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Change.cshtml
@@ -10,7 +10,8 @@
     function getPoList() {
         var $gridList = $("#gridList");
         $gridList.dataGrid({
-            url: "/HuaweiOrderManage/FindPOList/ChangePOList",
+            url: "/HuaweiOrderManage/FindPOList/PostPOList",
+            postData: { keyValue: "huaweiNotifyOrderChange" },
             height: $(window).height() - 128,
             colModel: [
                 { label: '订单号', name: 'poNumber', width: 100, align: 'left' },
@@ -18,9 +19,19 @@
                 { label: '编码', name: 'itemCode', width: 80, align: 'left' },
                 { label: '描述', name: 'itemDescription', width: 350, align: 'left' },
                 { label: '数量', name: 'needQuantity', width: 80, align: 'left' },
-                { label: '下发日期', name: 'publishDate', width: 80, align: 'left' },
+                {
+                    label: '下发日期', name: 'publishDate', width: 120, align: 'left',
+                    formatter: "date", formatoptions: { srcformat: 'Y-m-d H:i:s', newformat: 'Y-m-d H:i:s' }
+                },
+                {
+                    label: '承诺日期', name: 'promiseDate', width: 120, align: 'left',
+                    formatter: "date", formatoptions: { srcformat: 'Y-m-d H:i:s', newformat: 'Y-m-d H:i:s' }
+                },
+                {
+                    label: '有效日期', name: 'expireDate', width: 120, align: 'left',
+                    formatter: "date", formatoptions: { srcformat: 'Y-m-d H:i:s', newformat: 'Y-m-d H:i:s' }
+                },
                 { label: '收货地点', name: 'shipToLocation', width: 350, align: 'left' },
-                { label: '有效日期', name: 'expireDate', width: 80, align: 'left' },
                 { label: '采购员', name: 'agentName', width: 80, align: 'left' },
                 { label: '备注', name: 'remark', width: 200, align: 'left' }
             ],
