--- a/KingPlatform/Content/css/framework-login.css
+++ b/KingPlatform/Content/css/framework-login.css
@@ -4,6 +4,7 @@ body{font-family: 'Source Sans Pro', sans-serif;font-size:12px;}
 .wrapper.form-success .container h1{-webkit-transform: translateY(85px);-ms-transform: translateY(85px);transform: translateY(85px);}
 .container{max-width: 400px;margin: 0 auto;text-align: center;position: relative;}
 .container .logo{overflow:hidden;padding-bottom:30px;padding-left:65px;}
+.container .logo img {float:left; width:35px; height:35px;}
 .container .logo i{font-size: 35px;color:#fff;float:left;text-shadow: 4px 3px 0 #1d9d74,80px 80px 0 rgba(0,0,0,0.15);}
 .container .logo h1{padding-top:2px;padding-left:15px;float:left;font-size: 22px;font-weight: bold;color:#fff;text-shadow: 4px 3px 0 #1ABC9C,90px 80px 0 rgba(0,0,0,0.15);}
 .container .logo span{font-size: 30px;font-weight: bold;}
