--- a/KingPlatform/Content/js/jqgrid/jqgrid.css
+++ b/KingPlatform/Content/js/jqgrid/jqgrid.css
@@ -38,9 +38,9 @@
 .ui-jqgrid tr.ui-search-toolbar td > input{}
 .ui-jqgrid tr.ui-search-toolbar select{}
 /* Body*/.ui-jqgrid .table-bordered{border-left:0px none !important;border-bottom:0px none !important;}
-.ui-jqgrid .table-bordered th{border-left:0px none !important;padding-top:8px;padding-bottom:8px;font-weight: normal;border-right: 0px;background: #eee;}
+.ui-jqgrid .table-bordered th{border-left:0px none !important;padding-top:8px;padding-bottom:8px;font-weight: normal;/*border-right: 0px;*/background: #eee;}
 .ui-jqgrid .table-bordered th:hover{background: #eee;}
-.ui-jqgrid .table-bordered td{border-left:0px none !important;border: 1px dashed #d7d7d7;border-right: 0px;padding-top:0px;padding-bottom:0px;height:30px;line-height:30px;}
+.ui-jqgrid .table-bordered td{border-left:0px none !important;border: 1px dashed #d7d7d7;/*border-right: 0px;*/padding-top:0px;padding-bottom:0px;height:30px;line-height:30px;}
 .ui-jqgrid .table>tbody>td.actives{background-color: #f5f5f5;}
 .ui-jqgrid .table-bordered th.ui-th-rtl{border-right:0px none !important;}
 .ui-jqgrid .table-bordered tr.ui-row-rtl td{border-right:0px none !important;border-left: 1px solid #ddd !important;}
