--- a/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Change.cshtml
+++ b/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Change.cshtml
@@ -24,7 +24,7 @@
                     formatter: "date", formatoptions: { srcformat: 'Y-m-d H:i:s', newformat: 'Y-m-d H:i:s' }
                 },
                 {
-                    label: '承诺日期', name: 'promiseDate', width: 120, align: 'left',
+                    label: '承诺日期', name: 'promiseDate', width: 120, align: 'left', editable:true,
                     formatter: "date", formatoptions: { srcformat: 'Y-m-d H:i:s', newformat: 'Y-m-d H:i:s' }
                 },
                 {
@@ -43,8 +43,26 @@
             gridComplete: function () {
                 $('#ajax-loader').fadeOut();
                 $("input[type='checkbox']").removeClass('checkbox');
+            },
+            onCellSelect: function (rowid, iCol, cellcontent, e) {
+                var ids = $("#gridList").jqGrid("getGridParam", "selarrrow");
+                if ($.inArray(rowid, ids) >= 0) {
+                    $("#choseNum").html(ids.length - 1);
+                }
+                else {
+                    $("#choseNum").html(ids.length + 1);
+                }
+            },
+            onSelectAll: function (aRowids, status) {
+                var ids = $("#gridList").jqGrid("getGridParam", "selarrrow");
+                $("#choseNum").html(ids.length);
+            },
+            onPaging: function (pgButton) {
+                $('#ajax-loader').fadeIn();
             }
         });
+        $gridList.jqGrid('navGrid', '#gridPager', { edit: false, add: false, del: false });
+        $gridList.jqGrid('inlineNav', "#gridPager");
     }
 
     function btn_signBackPOList(flag) {
@@ -100,7 +118,7 @@
         <div class="operate">
             <ul class="nav nav-pills">
                 <li class="first">华为发起变更PO列表</li>
-                <li class="first">已选中<span>1</span>项</li>
+                <li class="first">已选中<span id="choseNum">0</span>项</li>
                 <li><a id="NF-btn_details" authorize="yes" onclick="btn_details()"><i class="fa fa-pencil-square-o"></i>查询PO变更明细</a></li>
                 <li><a id="NF-signBackPOList" authorize="yes" onclick="btn_signBackPOList(true)"><i class="fa fa-pencil-square-o"></i>PO签返（接受）</a></li>
                 <li><a id="NF-signBackPOList" authorize="yes" onclick="btn_signBackPOList(false)"><i class="fa fa-pencil-square-o"></i>PO签返（驳回）</a></li>
