--- a/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Warning.cshtml
+++ b/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Warning.cshtml
@@ -43,6 +43,9 @@
             gridComplete: function () {
                 $('#ajax-loader').fadeOut();
                 $("input[type='checkbox']").removeClass('checkbox');
+            },
+            onPaging: function (pgButton) {
+                $('#ajax-loader').fadeIn();
             }
         });
         $("#time_horizon a.btn-default").click(function () {
@@ -56,7 +59,6 @@
                 keyword: $("#txt_keyword").val(),
                 keyValue: $("#time_horizon a.active").attr('data-value'),
             }
-            //alert(JSON.stringify(queryJson));
             $('#ajax-loader').fadeIn();
             $gridList.jqGrid('setGridParam', {
                 url: "/HuaweiOrderManage/FindPOList/PostPOList",
