--- a/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/ChangeDetails.cshtml
+++ b/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/ChangeDetails.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Form";
+    ViewBag.Title = "ChangeDetails";
     Layout = "~/Views/Shared/_Form.cshtml";
 }
 <script>
@@ -17,52 +17,29 @@
         });
     });
 </script>
-<form id="form1">
-    <div style="margin-top: 10px; margin-left: 10px; margin-right: 10px;">
-        <ul class="nav nav-tabs">
-            <li class="active"><a href="#">变更明细</a></li>
-        </ul>
-        <div style="padding-top: 20px; margin-right: 30px;">
-            <table class="form">
-                <tr>
-                    <th class="formTitle">PO号</th>
-                    <td class="formValue">
-                        <input id="poNumber" name="poNumber" type="text" class="form-control" />
-                    </td>
-                    <th class="formTitle">PO行号</th>
-                    <td class="formValue">
-                        <input id="poLineNum" name="poLineNum" type="text" class="form-control" />
-                    </td>
-                </tr>
-                <tr>
-                    <th class="formTitle">变更字段</th>
-                    <td class="formValue">
-                        <input id="changeColumnName" name="changeColumnName" type="text" class="form-control" />
-                    </td>
-                    <th class="formTitle">变更理由</th>
-                    <td class="formValue">
-                        <input id="openRemark" name="openRemark" type="text" class="form-control" />
-                    </td>
-                </tr>
-                <tr>
-                    <th class="formTitle">变更前内容</th>
-                    <td class="formValue">
-                        <input id="changePreContent" name="changePreContent" type="text" class="form-control" />
-                    </td>
-                    <th class="formTitle">变更后内容</th>
-                    <td class="formValue">
-                        <input id="changeAfterContent" name="changeAfterContent" type="text" class="form-control" />
-                    </td>
-                </tr>
-                <tr>
-                    <th class="formTitle" valign="top" style="padding-top: 5px;">
-                        备注
-                    </th>
-                    <td class="formValue" colspan="3">
-                        <textarea id="memo" name="memo" class="form-control" style="height: 60px;"></textarea>
-                    </td>
-                </tr>
-            </table>
+<div id="ajax-loader">
+    <img src="~/Content/img/ajax-loader.gif" />
+</div>
+<div class="topPanel">
+    <div class="search">
+        <span>华为新PO列表</span>
+    </div>
+    <div class="toolbar">
+        <div class="btn-group">
+            <a class="btn btn-primary" onclick="$.reload()"><span class="glyphicon glyphicon-refresh"></span></a>
+        </div>
+        <div class="operate">
+            <ul class="nav nav-pills">
+                <li class="first">华为新PO列表</li>
+                <li class="first">已选中<span id="choseNum">0</span>项</li>
+                <li><a id="NF-signBackPOList" authorize="yes" onclick="btn_signBackPOList(true)"><i class="fa fa-pencil-square-o"></i>PO签返（接受）</a></li>
+                <li><a id="NF-signBackPOList" authorize="yes" onclick="btn_signBackPOList(false)"><i class="fa fa-pencil-square-o"></i>PO签返（驳回）</a></li>
+            </ul>
+            <a href="javascript:;" class="close"></a>
         </div>
     </div>
-</form>
+</div>
+<div class="gridPanel">
+    <table id="gridList"></table>
+    <div id="gridPager"></div>
+</div>
