--- a/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Onway.cshtml
+++ b/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Onway.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Cancel";
+    ViewBag.Title = "Onway";
     Layout = "~/Views/Shared/_Index.cshtml";
 }
 <script>
@@ -11,7 +11,7 @@
         var $gridList = $("#gridList");
         $gridList.dataGrid({
             url: "/HuaweiOrderManage/FindPOList/PostPOList",
-            postData: { poStatusValue: "huaweiNotifyCancelOrder" },
+            postData: { poStatusValue: "all", shipmentValue: "OPEN" },
             height: $(window).height() - 128,
             colModel: [
                 { label: '订单号', name: 'poNumber', width: 100, align: 'left' },
@@ -24,7 +24,7 @@
                     formatter: "date", formatoptions: { srcformat: 'Y-m-d H:i:s', newformat: 'Y-m-d H:i:s' }
                 },
                 {
-                    label: '承诺日期', name: 'promiseDate', width: 80, align: 'left',
+                    label: '承诺日期', name: 'promiseDate', width: 80, align: 'left', editable:true,
                     formatter: "date", formatoptions: { srcformat: 'Y-m-d', newformat: 'Y-m-d' }
                 },
                 {
@@ -38,9 +38,7 @@
             pager: "#gridPager",
             multiselect: true,
             rowNum: 100,
-            rowList : {},
             autoScroll: true,
-            autowidth: true,
             viewrecords: true,
             gridComplete: function () {
                 $('#ajax-loader').fadeOut();
@@ -52,6 +50,8 @@
                     $("#choseNum").html(ids.length - 1);
                 }
                 else {
+                    $("#gridList").editRow(rowid, true);
+                    //$(".form-control").attr('style', $(".form-control").attr('style').replace('height: 34px;', ''));
                     $("#choseNum").html(ids.length + 1);
                 }
             },
@@ -65,30 +65,28 @@
         });
     }
 
-    function btn_signBackPOList(flag) {
-        var operateType;
-        var message;
-        if (flag) {
-            operateType = "accept";
-            message = "注： 您确定要【接受】这些待取消订单吗？";
-        } else {
-            operateType = "reject";
-            message = "注： 您确定要【驳回】这些待取消订单吗？";
-        }
+    function btn_update() {
         var ids = $("#gridList").jqGrid("getGridParam", "selarrrow");
+        var promiseDate = new Array();
+        for (var i = 0; i < ids.length; i++) {
+            promiseDate[i] = $('#' + ids[i] + '_promiseDate').val();
+        }
         ids = ids.join("#");
-        $.modalConfirm(message, function (r) {
+        promiseDate = promiseDate.join("#");
+        $.modalConfirm("您确定要提交这些订单变更么？", function (r) {
             if (r) {
                 $.submitForm({
-                    url: "/HuaweiOrderManage/FindPOList/SignBackPOList",
-                    param: { ids: ids, operateType: operateType, types: "CancelPOList" },
+                    url: "/HuaweiOrderManage/FindPOList/OnwayPOList",
+                    param: { ids: ids, promiseDate: promiseDate, types: "OnwayList" },
                     success: function () {
                         $('#ajax-loader').fadeIn();
-                        $.currentWindow().$("#gridList").trigger("reloadGrid");
+                        window.location.reload();
+                        //$.currentWindow().$("#gridList").trigger("reloadGrid");
                     }
                 })
             }
         });
+        
     }
 
 </script>
@@ -97,7 +95,7 @@
 </div>
 <div class="topPanel">
     <div class="search">
-        <span>华为待取消PO列表</span>
+        <span>在途PO列表</span>
     </div>
     <div class="toolbar">
         <div class="btn-group">
@@ -105,10 +103,9 @@
         </div>
         <div class="operate">
             <ul class="nav nav-pills">
-                <li class="first">华为待取消PO列表</li>
+                <li class="first">在途PO列表</li>
                 <li class="first">已选中<span id="choseNum">0</span>项</li>
-                <li><a id="NF-signBackPOList" authorize="yes" onclick="btn_signBackPOList(true)"><i class="fa fa-pencil-square-o"></i>PO签返（接受）</a></li>
-                <li><a id="NF-signBackPOList" authorize="yes" onclick="btn_signBackPOList(false)"><i class="fa fa-pencil-square-o"></i>PO签返（驳回）</a></li>
+                <li><a id="NF-btn_details" authorize="yes" onclick="btn_update()"><i class="fa fa-pencil-square-o"></i>处理</a></li>
             </ul>
             <a href="javascript:;" class="close"></a>
         </div>
