--- a/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Warning.cshtml
+++ b/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Warning.cshtml
@@ -7,11 +7,11 @@
         getPoList();
     });
 
-    function getPoList(POurl) {
+    function getPoList() {
         var $gridList = $("#gridList");
         $gridList.dataGrid({
             url: "/HuaweiOrderManage/FindPOList/PostPOList",
-            postData: { keyValue: "po_warning_overdue" },
+            postData: { poStatusValue: "po_warning_overdue" },
             height: $(window).height() - 128,
             colModel: [
                 { label: '订单号', name: 'poNumber', width: 100, align: 'left' },
@@ -21,15 +21,15 @@
                 { label: '数量', name: 'needQuantity', width: 80, align: 'left' },
                 {
                     label: '下发日期', name: 'publishDate', width: 120, align: 'left',
-                    formatter: "date", formatoptions: { srcformat: 'Y-m-d H:i:s', newformat: 'Y-m-d H:i:s' }
+                    formatter: "date", formatoptions: { srcformat: 'Y-m-d', newformat: 'Y-m-d' }
                 },
                 {
                     label: '承诺日期', name: 'promiseDate', width: 120, align: 'left',
-                    formatter: "date", formatoptions: { srcformat: 'Y-m-d H:i:s', newformat: 'Y-m-d H:i:s' }
+                    formatter: "date", formatoptions: { srcformat: 'Y-m-d', newformat: 'Y-m-d' }
                 },
                 {
                     label: '有效日期', name: 'expireDate', width: 120, align: 'left',
-                    formatter: "date", formatoptions: { srcformat: 'Y-m-d H:i:s', newformat: 'Y-m-d H:i:s' }
+                    formatter: "date", formatoptions: { srcformat: 'Y-m-d', newformat: 'Y-m-d' }
                 },
                 { label: '收货地点', name: 'shipToLocation', width: 350, align: 'left' },
                 { label: '采购员', name: 'agentName', width: 80, align: 'left' },
