--- a/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Onway.cshtml
+++ b/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Onway.cshtml
@@ -37,7 +37,8 @@
             ],
             pager: "#gridPager",
             multiselect: true,
-            rowNum: 100,
+            rowNum: 20,
+            rowList: {},
             autoScroll: true,
             viewrecords: true,
             gridComplete: function () {
@@ -60,6 +61,7 @@
                 $("#choseNum").html(ids.length);
             },
             onPaging: function (pgButton) {
+                $("#choseNum").html(0);
                 $('#ajax-loader').fadeIn();
             }
         });
