--- a/KingPlatform/Views/Home/Index.cshtml
+++ b/KingPlatform/Views/Home/Index.cshtml
@@ -100,7 +100,7 @@
                             </div>
                             <div class="collapse navbar-collapse navbar-ex1-collapse" id="sidebar-nav">
                                 <ul class="nav nav-pills nav-stacked">
-                                    <li class="nav-header hidden-sm hidden-xs">
+                                    @*<li class="nav-header hidden-sm hidden-xs">
                                         常用菜单
                                         <i class="fa fa-gear" style="color: #868b98; font-size: 12px; margin-top: -6px; position: absolute; right: 23px; top: 50%; cursor: pointer;"></i>
                                     </li>
@@ -109,7 +109,7 @@
                                             <i class="fa fa-star-o"></i>
                                             <span>联系人</span>
                                         </a>
-                                    </li>
+                                    </li>*@
                                 </ul>
                             </div>
                         </div>
